--- a/85-summer-sale-main/index.html
+++ b/85-summer-sale-main/index.html
@@ -23,31 +23,31 @@
 </head>
 
 <body class="work-sons">
-    <header class="max-w-screen-xl mx-auto px-8  py-5 my-10 ">
-        <div class="flex justify-center pt-2  lg:pt-12 pb-16  bg-[#F9F6E2] ">
-            <div class="lg:text-center mt-24  items-center">
+    <header class=" max-w-screen-xl  mx-auto px-8  py-5 my-10 ">
+        <div class="flex flex-col lg:flex-row md:flex-row justify-center pt-2  lg:pt-12 pb-16  bg-[#F9F6E2] ">
+            <div class=" text-center lg:text-center mt-24  items-center">
                 <h5 class=" lg:text-2xl md:text-2xl font-medium pb-3">---SALE FEVER---</h5>
                 <h2 class=" text-2xl lg:text-6xl md:text-4xl font-bold pb-3">Purchase TK 200 or <br>
                     above & get <span class="text-[#E527B2]">20% off</span></h2>
                 <div class="flex justify-center gap-4">
                     <p class="text-lg font-normal text-center mt-2">Use Promo Code</p>
                     <button id="SELL-BUTTON"
-                        class=" lg:px-8 lg:py-3 bg-[#E527B2] text-white rounded-md">SELL200</button>
+                        class=" px-8 lg:py-3 bg-[#E527B2] text-white rounded-md">SELL200</button>
 
                 </div>
             </div>
-            <div class="pt-16 "><img class="lg:w-96 md:w-64 h-auto" src="./images/Summer 1.png" alt=""></div>
+            <div class="pt-16 lg:pl-10 md:pl-10 "><img class="lg:w-80 md:w-64 h-auto" src="./images/Summer 1.png" alt=""></div>
         </div>
     </header>
-    <main class="max-w-screen-xl mx-auto px-8  py-5 my-10 ">
+    <main class=" max-w-screen-xl mx-auto  px-8  py-5 my-10 ">
         <div class="lg:flex  md:flex gap-16 ">
             <div >
                 <div>
-                    <p class="text-lg font-normal">Kitchenware</p>
+                    <p class="ml-5 text-lg font-normal">Kitchenware</p>
                     <div id="first-card-container" class="gap-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
                         <!-- first card -->
                         <div onclick="calculation('title-1','price-1')"
-                            class="card w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
+                            class="card ml-5  w-80 bg-base-100 shadow-md  bg-[#1111110D]">
                             <figure><img src="./images/prod1.png" alt="Shoes" /></figure>
                             <div class="card-body items-center">
                                 <div class="rating ">
@@ -66,7 +66,7 @@
                         </div>
                         <!-- second card -->
                         <div onclick="calculation('title-2','price-2')"
-                            class="card w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
+                            class="card ml-5  w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
                             <figure><img src="./images/prod7.png" alt="Shoes" /></figure>
                             <div class="card-body items-center">
                                 <div class="rating ">
@@ -85,7 +85,7 @@
                         </div>
                         <!-- thard card -->
                         <div onclick="calculation('title-3','price-3')"
-                            class="card w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
+                            class="card ml-5  w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
                             <figure><img src="./images/prod3.png" alt="Shoes" /></figure>
                             <div class="card-body items-center">
                                 <div class="rating ">
@@ -106,13 +106,13 @@
 
                 </div>
                 <div>
-                    <p class="text-lg font-normal">Sportswear</p>
+                    <p class="ml-5 text-lg font-normal">Sportswear</p>
                     <div id="second-card-container" class=" gap-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
 
                         <div>
                             <!-- fourth card -->
                             <div onclick="calculation('title-4','price-4')"
-                                class="card w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
+                                class="card ml-5 w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
                                 <figure><img src="./images/prod8.png" alt="Shoes" /></figure>
                                 <div class="card-body items-center">
                                     <div class="rating ">
@@ -133,7 +133,7 @@
                         <div>
                             <!-- fivth card -->
                             <div onclick="calculation('title-5','price-5')"
-                                class="card w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
+                                class="card ml-5  w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
                                 <figure><img src="./images/prod4.png" alt="Shoes" /></figure>
                                 <div class="card-body items-center">
                                     <div class="rating ">
@@ -154,7 +154,7 @@
 
                         <!-- six card -->
                         <div onclick="calculation('title-6','price-6')"
-                            class="card w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
+                            class="card ml-5  w-80 bg-base-100 shadow-2xl  bg-[#1111110D]">
                             <figure><img src="./images/prod3.png" alt="Shoes" /></figure>
                             <div class="card-body items-center">
                                 <div class="rating ">
@@ -178,8 +178,8 @@
 
 
 
-            <div>
-                <div class="mb-2 h-20 pt-2  md:w-64   w-64 gap-5 drop-shadow bg-[#FFF] text-center ">
+            <div class="mt-5">
+                <div class="mb-2 h-20 pt-2 ml-5  md:w-64 lg:64  w-80 gap-5 drop-shadow bg-[#FFF] text-center ">
                     <p class="lg:text-lg lg:font-normal">Have coupon?</p>
                     <div class="flex justify-center">
                         <input id="input-cpn"
@@ -195,7 +195,7 @@
                           </button>
                     </div>
                 </div>
-                <div class=" text-center w-64  drop-shadow bg-[#FFF]">
+                <div class=" text-center lg:w-64 md:w-64 w-80 ml-5 drop-shadow bg-[#FFF]">
                     <div id="dynamic-text-add" class="h-48">
 
                     </div>
