complite-again-website

--- a/85-summer-sale-main/index.html
+++ b/85-summer-sale-main/index.html
@@ -209,21 +209,23 @@
                             
                         </div>
                         <hr>
-                        <div  class="lg:w-72 md:w-72 drop-shadow ">
+                        <div  class="w-44 lg:w-72 md:w-72 drop-shadow ">
                             <!-- Open the modal using ID.showModal() method -->
+                          <div class="ml-24">
                             <button disabled id="MAKE-PURCHASE-BUTTON" class="btn  text-white bg-[#E527B2] "
-                             onclick="my_modal_1.showModal()">Make
-                                Purchase</button>
+                            onclick="my_modal_1.showModal()">Make
+                               Purchase</button>
+                          </div>
                             <dialog id="my_modal_1" class="modal">
 
-                                <form method="dialog" class="modal-box">
-                                    <img class="mx-36" src="./images/congo.png" alt="">
+                                <form method="dialog" class="modal-box ">
+                                    <img class="mx-28" src="./images/congo.png" alt="">
                                     <h3 class="text-center font-bold text-lg">Congratulations</h3>
                                     <p class="py-4 text-center">Your Purchase the product</p>
 
                                     <!-- if there is a button in form, it will close the modal -->
-                                    <button id="home-button" class="rounded text-white px-2 py-3 bg-[#E527B2]">Go
-                                        Home</button>
+                                   <button id="home-button" class="rounded text-white px-2 py-3 bg-[#E527B2]">Go
+                                    Home</button>
 
                                 </form>
                             </dialog>
