--- a/85-summer-sale-main/index.html
+++ b/85-summer-sale-main/index.html
@@ -211,7 +211,7 @@
                         <hr>
                         <div  class="w-44 lg:w-72 md:w-72 drop-shadow ">
                             <!-- Open the modal using ID.showModal() method -->
-                          <div class="ml-24">
+                          <div class="px-24 ">
                             <button disabled id="MAKE-PURCHASE-BUTTON" class="btn  text-white bg-[#E527B2] "
                             onclick="my_modal_1.showModal()">Make
                                Purchase</button>
@@ -219,7 +219,7 @@
                             <dialog id="my_modal_1" class="modal">
 
                                 <form method="dialog" class="modal-box ">
-                                    <img class="mx-28" src="./images/congo.png" alt="">
+                                    <img class="px-40 " src="./images/congo.png" alt="">
                                     <h3 class="text-center font-bold text-lg">Congratulations</h3>
                                     <p class="py-4 text-center">Your Purchase the product</p>
 
